--- a/index.html
+++ b/index.html
@@ -1,12 +1,106 @@
 ﻿<!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project</title>
+    <title>ProjectSky</title>
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
+
 <body>
-    <h1>Welcome to My Project</h1>
-    <p>This is the starting point of the project.</p>
+    <header class="costom-navbar px-3 py-2 d-flex align-items-center justify-content-between">
+        <div class="d-flex align-items-center">
+            <div class="menu-icon mr-3">
+                <span class="d-block" style="width: 20px; height: 2px; background:#000; margin: 4px 0;"></span>
+                <span class="d-block" style="width: 20px; height: 2px; background:#000; margin: 4px 0;"></span>
+                <span class="d-block" style="width: 20px; height: 2px; background:#000; margin: 4px 0;"></span>
+            </div>
+            <h5 class="mb-0 font-weight-bold"><img src="img/icon.png" width="30" height="30"></h5>
+        </div>
+
+        <div class="d-flex align-items-center">
+            <a href="#" class="text-dark mr-3">首页</a>
+            <a href="#" class="text-dark mr-3">项目展示</a>
+            <button class="btn btn-dark mr-2">登录</button>
+            <button class="btn btn-outline-dark">注册</button>
+        </div>
+
+        <!--
+        <nav class="navbar navbar-expand-lg navbar-dark container">
+            <a class="navbar-brand" href="#"><img src="./img/icon.png" alt="header-icon" width="30"
+                    height="30">ProjectSky</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active"><a class="nav-link" href="#">首页</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">项目展示</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">登录</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">注册</a></li>
+                </ul>
+            </div>
+        </nav>
+        -->
+    </header>
+
+    <section class="hero">
+        <div>
+            <h1>探索低空飞行的无限可能</h1>
+            <p>预订您的下一次飞行体验，感受前所未有的自由</p>
+            <a href="#" class="btn btn-light btn-lg">立即预约</a>
+        </div>
+    </section>
+
+    <!-- 项目展示 -->
+  <section class="projects">
+    <div class="container">
+      <h2 class="text-center mb-5">热门飞行项目</h2>
+      <div class="row">
+        <div class="col-md-4 mb-4">
+          <div class="card project-card">
+            <img src="./img/hotairballon.png" alt="热气球飞行">
+            <div class="project-card-body">
+              <h5 class="card-title">热气球飞行</h5>
+              <p class="card-text">在宁静的天空中缓缓升空，享受360度全景视野。</p>
+              <a href="#" class="btn btn-primary">查看详情</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="card project-card">
+            <img src="img/paragliding.png" alt="滑翔伞体验">
+            <div class="project-card-body">
+              <h5 class="card-title">滑翔伞体验</h5>
+              <p class="card-text">与专业教练一同飞翔，感受风的力量与自由。</p>
+              <a href="#" class="btn btn-primary">查看详情</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="card project-card">
+            <img src="img/paramotor.png" alt="动力伞飞行">
+            <div class="project-card-body">
+              <h5 class="card-title">动力伞飞行</h5>
+              <p class="card-text">长距离飞行，探索未知的天空旅程。</p>
+              <a href="#" class="btn btn-primary">查看详情</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+    <!-- 页脚 -->
+    <footer>
+        <p>© 2025 低空飞行体验预约系统 | 联系我们: seanid4132@gmail.com</p>
+    </footer>
+
+    <!-- Bootstrap JS & jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
