--- a/index.html
+++ b/index.html
@@ -2,59 +2,40 @@
 <html lang="zh-CN">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProjectSky</title>
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ProjectSky</title>
+  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 
 <body>
-    <header class="costom-navbar px-3 py-2 d-flex align-items-center justify-content-between">
-        <div class="d-flex align-items-center">
-            <div class="menu-icon mr-3">
-                <span class="d-block" style="width: 20px; height: 2px; background:#000; margin: 4px 0;"></span>
-                <span class="d-block" style="width: 20px; height: 2px; background:#000; margin: 4px 0;"></span>
-                <span class="d-block" style="width: 20px; height: 2px; background:#000; margin: 4px 0;"></span>
-            </div>
-            <h5 class="mb-0 font-weight-bold"><img src="img/icon.png" width="30" height="30"></h5>
-        </div>
+  <header class="costom-navbar px-3 py-2 d-flex align-items-center justify-content-between">
+    <div class="d-flex align-items-center">
+      <h5 class="mb-0 font-weight-bold"><img src="img/icon.png" width="30" height="30" class="mr-3"></h5>
+      <h5 class="mb-0 font-weight-bold">ProjectSky</h5>
+    </div>
 
-        <div class="d-flex align-items-center">
-            <a href="#" class="text-dark mr-3">首页</a>
-            <a href="#" class="text-dark mr-3">项目展示</a>
-            <button class="btn btn-dark mr-2">登录</button>
-            <button class="btn btn-outline-dark">注册</button>
-        </div>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+    	<span class="navbar-toggler-icon"></span>
+  	</button>
 
-        <!--
-        <nav class="navbar navbar-expand-lg navbar-dark container">
-            <a class="navbar-brand" href="#"><img src="./img/icon.png" alt="header-icon" width="30"
-                    height="30">ProjectSky</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active"><a class="nav-link" href="#">首页</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">项目展示</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">登录</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">注册</a></li>
-                </ul>
-            </div>
-        </nav>
-        -->
-    </header>
+    <div class="d-flex align-items-center">
+      <a href="#" class="text-dark mr-4">首页</a>
+      <a href="#" class="text-dark mr-4">项目展示</a>
+      <a href="#" class="text-dark mr-4">登录</a>
+      <button class="btn btn-dark">注册</button>
+    </div>
+  </header>
 
-    <section class="hero">
-        <div>
-            <h1>探索低空飞行的无限可能</h1>
-            <p>预订您的下一次飞行体验，感受前所未有的自由</p>
-            <a href="#" class="btn btn-light btn-lg">立即预约</a>
-        </div>
-    </section>
+  <section class="hero">
+    <div class="hero-box">
+      <h1>探索低空飞行的无限可能</h1>
+      <p>预订您的下一次飞行体验，感受前所未有的自由</p>
+      <a href="#" class="btn btn-outline-light btn-lg hero-btn">立即预约</a>
+    </div>
+  </section>
 
-    <!-- 项目展示 -->
   <section class="projects">
     <div class="container">
       <h2 class="text-center mb-5">热门飞行项目</h2>
@@ -93,14 +74,63 @@
     </div>
   </section>
 
-    <!-- 页脚 -->
-    <footer>
-        <p>© 2025 低空飞行体验预约系统 | 联系我们: seanid4132@gmail.com</p>
-    </footer>
+	<section class="features bg-light py-5">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-md-4">
+        <i class="fas fa-plane fa-2x mb-3"></i>
+        <h5>多样化飞行项目</h5>
+        <p>热气球、滑翔伞、动力伞等应有尽有，满足各类用户需求。</p>
+      </div>
+      <div class="col-md-4">
+        <i class="fas fa-user-shield fa-2x mb-3"></i>
+        <h5>专业安全保障</h5>
+        <p>平台与认证飞行基地合作，全程配备专业飞行教练。</p>
+      </div>
+      <div class="col-md-4">
+        <i class="fas fa-mobile-alt fa-2x mb-3"></i>
+        <h5>便捷在线预约</h5>
+        <p>无需电话沟通，一键完成预约与支付，随时随地查看订单。</p>
+      </div>
+    </div>
+  </div>
+</section>
 
-    <!-- Bootstrap JS & jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+
+<section class="testimonials py-5 text-white" style="background: #343a40;">
+  <div class="container">
+    <h2 class="text-center mb-4">用户好评</h2>
+    <div class="row">
+      <div class="col-md-4">
+        <blockquote>
+          <p>"第一次体验热气球飞行，视野震撼，服务很专业！"</p>
+          <p>—— 小林</p>
+        </blockquote>
+      </div>
+      <div class="col-md-4">
+        <blockquote>
+          <p>"滑翔伞真的太刺激了！推荐大家带朋友一起体验～"</p>
+          <p>—— 小文</p>
+        </blockquote>
+      </div>
+      <div class="col-md-4">
+        <blockquote>
+          <p>"平台操作流畅，预约简单，教练很负责，五星好评！"</p>
+          <p>—— 小丽</p>
+        </blockquote>
+      </div>
+    </div>
+  </div>
+</section>
+
+  <!-- 页脚 -->
+  <footer>
+    <p>© 2025 低空飞行体验预约系统 | 联系我们: seanid4132@gmail.com</p>
+  </footer>
+
+  <!-- Bootstrap JS & jQuery -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
