--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
   <title>ProjectSky</title>
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
 </head>
 
 <body>
   <header class="costom-navbar px-3 py-2 d-flex align-items-center justify-content-between">
     <div class="d-flex align-items-center">
-      <h5 class="mb-0 font-weight-bold"><img src="img/icon.png" width="30" height="30" class="mr-3"></h5>
+      <h5 class="mb-0 font-weight-bold"><img src="img/icon.png" width="35" height="35" class="mr-3"></h5>
       <h5 class="mb-0 font-weight-bold">ProjectSky</h5>
     </div>
 
@@ -46,7 +48,7 @@
             <div class="project-card-body">
               <h5 class="card-title">热气球飞行</h5>
               <p class="card-text">在宁静的天空中缓缓升空，享受360度全景视野。</p>
-              <a href="#" class="btn btn-primary">查看详情</a>
+              <a href="#" class="btn btn-primary btn-project">查看详情</a>
             </div>
           </div>
         </div>
@@ -122,6 +124,21 @@
     </div>
   </div>
 </section>
+
+<section class="partners-social py-5 bg-light">
+  <div class="container text-center">
+    <h5 class="mb-3 font-weight-bold">关注我们</h5>
+    <div class="d-flex justify-content-center">
+      <a href="https://github.com/SeanidHau/HZNUWeb" target="_blank" class="mx-2 social-icon"><i class="fab fa-github fa-2x"></i></a>
+      <a href="#" class="mx-2 social-icon"><i class="fab fa-qq fa-2x"></i></a>
+      <a href="#" class="mx-2 social-icon"><i class="fab fa-weixin fa-2x"></i></a>
+      <a href="#" class="mx-2 social-icon"><i class="fab fa-weibo fa-2x"></i></a>
+      <a href="#" class="mx-2 social-icon"><i class="fas fa-envelope fa-2x"></i></a>
+    </div>
+
+  </div>
+</section>
+
 
   <!-- 页脚 -->
   <footer>
