--- a/index.html
+++ b/index.html
@@ -2,152 +2,153 @@
 <html lang="zh-CN">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ProjectSky</title>
-  <link rel="stylesheet" href="./css/main.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ProjectSky</title>
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
 </head>
 
 <body>
-  <header class="costom-navbar px-3 py-2 d-flex align-items-center justify-content-between">
-    <div class="d-flex align-items-center">
-      <h5 class="mb-0 font-weight-bold"><img src="img/icon.png" width="35" height="35" class="mr-3"></h5>
-      <h5 class="mb-0 font-weight-bold">ProjectSky</h5>
-    </div>
-
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
-    	<span class="navbar-toggler-icon"></span>
-  	</button>
-
-    <div class="d-flex align-items-center">
-      <a href="#" class="text-dark mr-4">首页</a>
-      <a href="#" class="text-dark mr-4">项目展示</a>
-      <a href="#" class="text-dark mr-4">登录</a>
-      <button class="btn btn-dark">注册</button>
-    </div>
-  </header>
-
-  <section class="hero">
-    <div class="hero-box">
-      <h1>探索低空飞行的无限可能</h1>
-      <p>预订您的下一次飞行体验，感受前所未有的自由</p>
-      <a href="#" class="btn btn-outline-light btn-lg hero-btn">立即预约</a>
-    </div>
-  </section>
-
-  <section class="projects">
-    <div class="container">
-      <h2 class="text-center mb-5">热门飞行项目</h2>
-      <div class="row">
-        <div class="col-md-4 mb-4">
-          <div class="card project-card">
-            <img src="./img/hotairballon.png" alt="热气球飞行">
-            <div class="project-card-body">
-              <h5 class="card-title">热气球飞行</h5>
-              <p class="card-text">在宁静的天空中缓缓升空，享受360度全景视野。</p>
-              <a href="#" class="btn btn-primary btn-project">查看详情</a>
-            </div>
-          </div>
+    <header class="costom-navbar px-3 py-2 d-flex align-items-center justify-content-between">
+        <div class="d-flex align-items-center">
+            <h5 class="mb-0 font-weight-bold"><img src="./img/icon.png" width="35" height="35" class="mr-3"></h5>
+            <h5 class="mb-0 font-weight-bold">ProjectSky</h5>
         </div>
-        <div class="col-md-4 mb-4">
-          <div class="card project-card">
-            <img src="img/paragliding.png" alt="滑翔伞体验">
-            <div class="project-card-body">
-              <h5 class="card-title">滑翔伞体验</h5>
-              <p class="card-text">与专业教练一同飞翔，感受风的力量与自由。</p>
-              <a href="#" class="btn btn-primary">查看详情</a>
-            </div>
-          </div>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="d-flex align-items-center">
+            <a href="#" class="text-dark mr-4">首页</a>
+            <a href="#" class="text-dark mr-4">项目展示</a>
+            <a href="#" class="text-dark mr-4">登录</a>
+            <button class="btn btn-dark">注册</button>
         </div>
-        <div class="col-md-4 mb-4">
-          <div class="card project-card">
-            <img src="img/paramotor.png" alt="动力伞飞行">
-            <div class="project-card-body">
-              <h5 class="card-title">动力伞飞行</h5>
-              <p class="card-text">长距离飞行，探索未知的天空旅程。</p>
-              <a href="#" class="btn btn-primary">查看详情</a>
-            </div>
-          </div>
+    </header>
+
+    <section class="hero">
+        <div class="hero-box">
+            <h1>探索低空飞行的无限可能</h1>
+            <p>预订您的下一次飞行体验，感受前所未有的自由</p>
+            <a href="#" class="btn btn-outline-light btn-lg hero-btn">立即预约</a>
         </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
-	<section class="features bg-light py-5">
-  <div class="container">
-    <div class="row text-center">
-      <div class="col-md-4">
-        <i class="fas fa-plane fa-2x mb-3"></i>
-        <h5>多样化飞行项目</h5>
-        <p>热气球、滑翔伞、动力伞等应有尽有，满足各类用户需求。</p>
-      </div>
-      <div class="col-md-4">
-        <i class="fas fa-user-shield fa-2x mb-3"></i>
-        <h5>专业安全保障</h5>
-        <p>平台与认证飞行基地合作，全程配备专业飞行教练。</p>
-      </div>
-      <div class="col-md-4">
-        <i class="fas fa-mobile-alt fa-2x mb-3"></i>
-        <h5>便捷在线预约</h5>
-        <p>无需电话沟通，一键完成预约与支付，随时随地查看订单。</p>
-      </div>
-    </div>
-  </div>
-</section>
+    <section class="projects">
+        <div class="container">
+            <h2 class="text-center mb-5">热门飞行项目</h2>
+            <div class="row">
+                <div class="col-md-4 mb-4">
+                    <div class="card project-card">
+                        <img src="./img/hotairballon.png" alt="热气球飞行">
+                        <div class="project-card-body">
+                            <h5 class="card-title">热气球飞行</h5>
+                            <p class="card-text">在宁静的天空中缓缓升空，享受360度全景视野。</p>
+                            <a href="#" class="btn btn-primary btn-project">查看详情</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card project-card">
+                        <img src="img/paragliding.png" alt="滑翔伞体验">
+                        <div class="project-card-body">
+                            <h5 class="card-title">滑翔伞体验</h5>
+                            <p class="card-text">与专业教练一同飞翔，感受风的力量与自由。</p>
+                            <a href="#" class="btn btn-primary">查看详情</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card project-card">
+                        <img src="img/paramotor.png" alt="动力伞飞行">
+                        <div class="project-card-body">
+                            <h5 class="card-title">动力伞飞行</h5>
+                            <p class="card-text">长距离飞行，探索未知的天空旅程。</p>
+                            <a href="#" class="btn btn-primary">查看详情</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-
-<section class="testimonials py-5 text-white" style="background: #343a40;">
-  <div class="container">
-    <h2 class="text-center mb-4">用户好评</h2>
-    <div class="row">
-      <div class="col-md-4">
-        <blockquote>
-          <p>"第一次体验热气球飞行，视野震撼，服务很专业！"</p>
-          <p>—— 小林</p>
-        </blockquote>
-      </div>
-      <div class="col-md-4">
-        <blockquote>
-          <p>"滑翔伞真的太刺激了！推荐大家带朋友一起体验～"</p>
-          <p>—— 小文</p>
-        </blockquote>
-      </div>
-      <div class="col-md-4">
-        <blockquote>
-          <p>"平台操作流畅，预约简单，教练很负责，五星好评！"</p>
-          <p>—— 小丽</p>
-        </blockquote>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="partners-social py-5 bg-light">
-  <div class="container text-center">
-    <h5 class="mb-3 font-weight-bold">关注我们</h5>
-    <div class="d-flex justify-content-center">
-      <a href="https://github.com/SeanidHau/HZNUWeb" target="_blank" class="mx-2 social-icon"><i class="fab fa-github fa-2x"></i></a>
-      <a href="#" class="mx-2 social-icon"><i class="fab fa-qq fa-2x"></i></a>
-      <a href="#" class="mx-2 social-icon"><i class="fab fa-weixin fa-2x"></i></a>
-      <a href="#" class="mx-2 social-icon"><i class="fab fa-weibo fa-2x"></i></a>
-      <a href="#" class="mx-2 social-icon"><i class="fas fa-envelope fa-2x"></i></a>
-    </div>
-
-  </div>
-</section>
+    <section class="features bg-light py-5">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <i class="fas fa-plane fa-2x mb-3"></i>
+                    <h5>多样化飞行项目</h5>
+                    <p>热气球、滑翔伞、动力伞等应有尽有，满足各类用户需求。</p>
+                </div>
+                <div class="col-md-4">
+                    <i class="fas fa-user-shield fa-2x mb-3"></i>
+                    <h5>专业安全保障</h5>
+                    <p>平台与认证飞行基地合作，全程配备专业飞行教练。</p>
+                </div>
+                <div class="col-md-4">
+                    <i class="fas fa-mobile-alt fa-2x mb-3"></i>
+                    <h5>便捷在线预约</h5>
+                    <p>无需电话沟通，一键完成预约与支付，随时随地查看订单。</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
-  <!-- 页脚 -->
-  <footer>
-    <p>© 2025 低空飞行体验预约系统 | 联系我们: seanid4132@gmail.com</p>
-  </footer>
+    <section class="testimonials py-5 text-white" style="background: #343a40;">
+        <div class="container">
+            <h2 class="text-center mb-4">用户好评</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <blockquote>
+                        <p>"第一次体验热气球飞行，视野震撼，服务很专业！"</p>
+                        <p>—— 小林</p>
+                    </blockquote>
+                </div>
+                <div class="col-md-4">
+                    <blockquote>
+                        <p>"滑翔伞真的太刺激了！推荐大家带朋友一起体验～"</p>
+                        <p>—— 小文</p>
+                    </blockquote>
+                </div>
+                <div class="col-md-4">
+                    <blockquote>
+                        <p>"平台操作流畅，预约简单，教练很负责，五星好评！"</p>
+                        <p>—— 小丽</p>
+                    </blockquote>
+                </div>
+            </div>
+        </div>
+    </section>
 
-  <!-- Bootstrap JS & jQuery -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+    <section class="partners-social py-5 bg-light">
+        <div class="container text-center">
+            <h5 class="mb-3 font-weight-bold">关注我们</h5>
+            <div class="d-flex justify-content-center">
+                <a href="https://github.com/SeanidHau/HZNUWeb" target="_blank" class="mx-2 social-icon"><i
+                        class="fab fa-github fa-2x"></i></a>
+                <a href="#" class="mx-2 social-icon"><i class="fab fa-qq fa-2x"></i></a>
+                <a href="#" class="mx-2 social-icon"><i class="fab fa-weixin fa-2x"></i></a>
+                <a href="#" class="mx-2 social-icon"><i class="fab fa-weibo fa-2x"></i></a>
+                <a href="#" class="mx-2 social-icon"><i class="fas fa-envelope fa-2x"></i></a>
+            </div>
+
+        </div>
+    </section>
+
+
+    <!-- 页脚 -->
+    <footer>
+        <p>© 2025 低空飞行体验预约系统 | 联系我们: seanid4132@gmail.com</p>
+    </footer>
+
+    <!-- Bootstrap JS & jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
