--- a/htmls/login.html
+++ b/htmls/login.html
@@ -2,33 +2,67 @@
 <html lang="zh-CN">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ProjectSky</title>
-  <link rel="stylesheet" href="../css/login.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon.png">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>用户登录</title>
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon.png">
 </head>
 
 <body>
-    <header class="costom-navbar px-3 py-2 d-flex align-items-center justify-content-between">
-        <div class="d-flex align-items-center">
-            <h5 class="mb-0 font-weight-bold"><img src="../img/icon.png" width="35" height="35" class="mr-3"></h5>
-            <h5 class="mb-0 font-weight-bold">ProjectSky</h5>
+    <div class="pages">
+        <header class="costom-navbar px-3 py-2 d-flex align-items-center justify-content-between">
+            <div class="d-flex align-items-center">
+                <h5 class="mb-0 font-weight-bold"><img src="../img/icon.png" width="35" height="35" class="mr-3"></h5>
+                <h5 class="mb-0 font-weight-bold">ProjectSky/login</h5>
+            </div>
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="d-flex align-items-center">
+                <a href="../index.html" class="text-dark mr-4">首页</a>
+                <a href="#" class="text-dark mr-4">项目展示</a>
+                <a href="./login.html" class="text-dark mr-4">登录</a>
+                <button class="btn btn-dark">注册</button>
+            </div>
+        </header>
+
+        <div class="login-card">
+            <div class="login-left">
+                <img src="../img/login.png" alt="飞行图片">
+            </div>
+            <div class="login-right">
+                <h2>欢迎登录</h2>
+                <form action="/api/login" method="POST">
+                    <input type="text" name="username" placeholder="手机号 / 邮箱" required>
+                    <input type="password" name="password" placeholder="请输入密码" required>
+                    <div class="remember">
+                        <label><input type="checkbox" name="remember"> 记住我</label>
+                    </div>
+                    <button type="submit">登录</button>
+
+                    <div class="forgot-link">
+                        <a href="#">忘记密码？</a>
+                    </div>
+                </form>
+                <div class="login-register">
+                    <p>还没有账号？<a href="./register.html">立即注册</a></p>
+                </div>
+            </div>
         </div>
+    </div>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <footer>
+        <p>© 2025 低空飞行体验预约系统 | 联系我们: seanid4132@gmail.com</p>
+    </footer>
 
-        <div class="d-flex align-items-center">
-            <a href="#" class="text-dark mr-4">首页</a>
-            <a href="#" class="text-dark mr-4">项目展示</a>
-            <a href="#" class="text-dark mr-4">登录</a>
-            <button class="btn btn-dark">注册</button>
-        </div>
-    </header>
-
-    
+    <!-- Bootstrap JS & jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
+</html>
