--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         </button>
 
         <div class="d-flex align-items-center">
-            <a href="#" class="text-dark mr-4">首页</a>
+            <a href="./index.html" class="text-dark mr-4">首页</a>
             <a href="#" class="text-dark mr-4">项目展示</a>
-            <a href="#" class="text-dark mr-4">登录</a>
+            <a href="./htmls/login.html" class="text-dark mr-4">登录</a>
             <button class="btn btn-dark">注册</button>
         </div>
     </header>
