--- a/htmls/login.html
+++ b/htmls/login.html
@@ -37,6 +37,7 @@
             </div>
             <div class="login-right">
                 <h2>欢迎登录</h2>
+                <p class="subtitle">开始预约你的飞行之旅</p>
                 <form action="/api/login" method="POST">
                     <input type="text" name="username" placeholder="手机号 / 邮箱" required>
                     <input type="password" name="password" placeholder="请输入密码" required>
