--- a/htmls/register.html
+++ b/htmls/register.html
@@ -1,1 +1,42 @@
-﻿
+﻿<!DOCTYPE html>
+<html lang="zh-CN">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>用户登录</title>
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon.png">
+</head>
+
+<body>
+    <div class="pages">
+        <header class="costom-navbar px-3 py-2 d-flex align-items-center justify-content-between">
+            <div class="d-flex align-items-center">
+                <h5 class="mb-0 font-weight-bold"><img src="../img/icon.png" width="35" height="35" class="mr-3"></h5>
+                <h5 class="mb-0 font-weight-bold">ProjectSky/register</h5>
+            </div>
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="d-flex align-items-center">
+                <a href="../index.html" class="text-dark mr-4">首页</a>
+                <a href="#" class="text-dark mr-4">项目展示</a>
+                <a href="./login.html" class="text-dark mr-4">登录</a>
+                <button class="btn btn-dark">注册</button>
+            </div>
+        </header>
+    </div>
+
+
+
+    <!-- Bootstrap JS & jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html>
