finish orders.html

--- a/htmls/personal.html
+++ b/htmls/personal.html
@@ -23,7 +23,8 @@
                 <a href="../index.html" class="text-dark mr-4">首页</a>
                 <a href="#" class="text-dark mr-4">项目展示</a>
                 <a href="./personal.html" class="text-dark mr-4">个人主页</a>
-                <a href="./personal.html" class="test-dark mr-4"><i class="fas fa-user-circle fa-2x" style="color: #333333"></i></a>
+                <a href="./personal.html" class="test-dark mr-4"><i class="fas fa-user-circle fa-2x"
+                        style="color: #333333"></i></a>
             </div>
         </header>
 
@@ -53,18 +54,10 @@
                 </div>
 
                 <div class="profile-actions"></div>
-                    <a href="my-orders.html"><i class="fas fa-arrow-right"></i>查看更多预约</a>
-                </div>
+                <a href="orders.html"><i class="fas fa-arrow-right"></i>查看更多预约</a>
             </div>
-
-
         </div>
     </div>
-
-
-
-    </div>
-
 
 
     <footer>
