--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="d-flex align-items-center">
             <a href="./index.html" class="text-dark mr-4">首页</a>
-            <a href="#" class="text-dark mr-4">项目展示</a>
+            <a href="./htmls/project.html" class="text-dark mr-4">项目展示</a>
             <a href="./htmls/login.html" class="text-dark mr-4">登录</a>
             <button class="btn btn-dark">注册</button>
         </div>
