--- a/htmls/login.html
+++ b/htmls/login.html
@@ -21,7 +21,7 @@
 
             <div class="d-flex align-items-center">
                 <a href="../index.html" class="text-dark mr-4">首页</a>
-                <a href="#" class="text-dark mr-4">项目展示</a>
+                <a href="./project.html" class="text-dark mr-4">项目展示</a>
                 <a href="./login.html" class="text-dark mr-4">登录</a>
                 <button class="btn btn-dark">注册</button>
             </div>
