--- a/htmls/orders.html
+++ b/htmls/orders.html
@@ -16,12 +16,12 @@
         <header class="costom-navbar px-3 py-2 d-flex align-items-center justify-content-between">
             <div class="d-flex align-items-center">
                 <h5 class="mb-0 font-weight-bold"><img src="../img/icon.png" width="35" height="35" class="mr-3"></h5>
-                <h5 class="mb-0 font-weight-bold">ProjectSky/personal</h5>
+                <h5 class="mb-0 font-weight-bold">ProjectSky/orders</h5>
             </div>
 
             <div class="d-flex align-items-center">
                 <a href="../index.html" class="text-dark mr-4">首页</a>
-                <a href="#" class="text-dark mr-4">项目展示</a>
+                <a href="./project.html" class="text-dark mr-4">项目展示</a>
                 <a href="./personal.html" class="text-dark mr-4">个人主页</a>
                 <a href="./personal.html" class="test-dark mr-4"><i class="fas fa-user-circle fa-2x"
                         style="color: #333333"></i></a>
@@ -63,13 +63,13 @@
                     <div class="order-card">
                         <div class="order-info">
                             <h4>热气球飞行体验</h4>
-                            <p>飞行时间：2025-06-10 10:00</p>
-                            <p>飞行地点：杭州·富阳</p>
-                            <p>订单状态：<span class="status paid">已支付</span></p>
+                            <p>飞行时间：2025-06-03 11:00</p>
+                            <p>飞行地点：上海·静安</p>
+                            <p>订单状态：<span class="status paid">已完成</span></p>
                         </div>
                         <div class="order-actions">
                             <button class="btn detail">查看详情</button>
-                            <button class="btn cancel">取消订单</button>
+                            <button class="btn feedback">反馈评价</button>
                         </div>
                     </div>
                 </div>
