--- a/htmls/register.html
+++ b/htmls/register.html
@@ -21,7 +21,7 @@
 
             <div class="d-flex align-items-center">
                 <a href="../index.html" class="text-dark mr-4">首页</a>
-                <a href="#" class="text-dark mr-4">项目展示</a>
+                <a href="./project.html" class="text-dark mr-4">项目展示</a>
                 <a href="./login.html" class="text-dark mr-4">登录</a>
                 <button class="btn btn-dark">注册</button>
             </div>
@@ -33,7 +33,7 @@
                 <p class="subtitle">开启你的飞行预约体验</p>
                 <form action="/api/register" method="POST">
                     <input type="text" name="username" placeholder="请输入用户名" required>
-                    <input type="email-or-phone" name="email-or-phone" placeholder="请输入邮箱/手机号" required>
+                    <input type="email-or-phone" name="email-or-phone" placeholder="请输入手机号/邮箱" required>
                     <div class="verify-group">
                         <input type="text" name="code" placeholder="请输入验证码" required>
                         <button type="button" class="verify-btn" onclick="sendCode(this)">获取验证码</button>
